updating hyperlink style

--- a/style.css
+++ b/style.css
@@ -77,8 +77,13 @@ p.secondHeadline{
 }
 
 a{
-    color: #9E9E9E;
+    color: #3C948B;
     text-decoration: none;
+}
+
+a.visited{
+		color: #523E7C;
+		text-decoration: none;
 }
 
 a:hover{
